# NCEPLIBS-nemsio

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  annotated.html  annotated_dup.js  bafrio.f  build.sh  build_nemsio.sh  byteswap.c  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  files.html  files_dup.js  index.html  mkgfsnemsioctl_8f90.html  mkgfsnemsioctl_8f90_source.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  nemsio__chgdate_8f90.html  nemsio__chgdate_8f90_source.html  nemsio__get_8f90.html  nemsio__get_8f90_source.html  nemsio__module_8f90.html  nemsio__module_8f90_source.html  nemsio__module__mpi_8f90.html  nemsio__module__mpi_8f90.js  nemsio__module__mpi_8f90_source.html  nemsio__openclose_8f90.html  nemsio__openclose_8f90.js  nemsio__openclose_8f90_source.html  nemsio__write_8f90.html  nemsio__write_8f90.js  nemsio__write_8f90_source.html  nemsio_openclose.f90  nemsio_read.f90  (+11 more)
.github/workflows/: Intel.yml  Spack.yml  main.yml
Conf/: AAA_rename_conf.sh  Nemsio_gnu_General.sh  Nemsio_intel_Cray.sh  Nemsio_intel_Dell.sh  Nemsio_intel_Gaea.sh  Nemsio_intel_General.sh  Nemsio_intel_Hera.sh  Nemsio_intel_Theia.sh  Nemsio_intel_Wcoss.sh
cmake/: PackageConfig.cmake.in
conf/: configure  configure.AIX.4.xlf  configure.AIX.8.xlf  configure.Gaea.intel  configure.Gaea.pgi  configure.Linux.gnu  configure.Linux.intel  configure.Zeus.intel  configure.wcoss.intel
docs/: CMakeLists.txt  Doxyfile.in
modulefiles/nemsio-cray-haswell/: 2.2.3  2.2.4
search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  files_0.js  files_1.js  files_2.js  files_3.js  searchdata.js
spack/: README  package.py
src/: CMakeLists.txt  Makefile  build.sh  nemsio_module.f90  nemsio_module_mpi.f90  nemsio_openclose.f90  nemsio_read.f90  nemsio_write.f90
tests/: CMakeLists.txt  makefile  makefile_read_nemsio_wcoss  read_nemsio.f90  readme  run_cray.sh
unit_test/: CMakeLists.txt  makefile_read_nemsio_cray_intel  makefile_read_nemsio_theia  makefile_read_nemsio_wcoss  read_nemsio.f90
utils/: CMakeLists.txt  mkgfsnemsioctl.f90  nemsio_chgdate.f90  nemsio_get.f90  nemsio_read.f90
